[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nofusion"
version = "0.0.2"
authors = [
    { name = "Erosire", email = "author@erosire.com" },
]
dependencies = [
    "noobish > 0.0.0"
]

description = "to run diffusion model easier"
readme = "readme.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"

[project.urls]
Homepage = "https://github.com/nqqt/nofusion"
Issues = "https://github.com/nqqt/nofusion/issues"